cmake_minimum_required(VERSION 3.20)
project(boost-cmake)

add_subdirectory(assert)
add_subdirectory(pool)
add_subdirectory(intrusive)
add_subdirectory(config)
add_subdirectory(context)
add_subdirectory(fiber)
add_subdirectory(smart_ptr)
add_subdirectory(move)
add_subdirectory(core)
add_subdirectory(container_hash)
add_subdirectory(static_assert)
add_subdirectory(throw_exception)
add_subdirectory(detail)
add_subdirectory(predef)
add_subdirectory(preprocessor)
add_subdirectory(type_traits)
add_subdirectory(integer)
add_subdirectory(winapi)
add_subdirectory(algorithm)
add_subdirectory(filesystem)
add_subdirectory(format)
add_subdirectory(array)
add_subdirectory(bind)
add_subdirectory(concept_check)
add_subdirectory(exception)
add_subdirectory(tuple)
add_subdirectory(function)
add_subdirectory(range)
add_subdirectory(unordered)
add_subdirectory(container)
add_subdirectory(system)
add_subdirectory(regex)
add_subdirectory(type_index)
add_subdirectory(mp11)
add_subdirectory(variant2)
add_subdirectory(atomic)
add_subdirectory(align)
add_subdirectory(typeof)
add_subdirectory(conversion)
add_subdirectory(utility)
add_subdirectory(optional)
add_subdirectory(function_types)
add_subdirectory(mpl)
add_subdirectory(io)
add_subdirectory(fusion)
add_subdirectory(iterator)
